# Trex_engin

./: .gitignore  README.md  pyproject.toml
src/trex/: __init__.py  plugin.py  plugin_example.py  utils.py
src/trex/api/: __init__.py  api.py  context_api.py
src/trex/base/: __init__.py  indic_key.py  ohlcv.py  timeframe.py
src/trex/domain/: __init__.py  types.py
src/trex/engine/: __init__.py  auto.py  context.py  indicator.py  pipeline.py  source.py
src/trex/indic/: CTF.py  ZIG.py  __init__.py
src/trex/indic/action/: __init__.py
src/trex/indic/hybrid/: __init__.py  ichimoku.py  psar.py  supertrend.py  vwap.py
src/trex/indic/momentum/: __init__.py  ac.py  adx.py  ao.py  aroon.py  coppock.py  dpo.py  fisher.py  kst.py  macd.py  rsi.py  rvi_momentum.py  trix.py  tsi.py  vortex.py
src/trex/indic/oscillator/: __init__.py  apo.py  cci.py  chop.py  cmo.py  force_index.py  mfi.py  mom.py  obv.py  ppo.py  roc.py  stochastic.py  stochrsi.py  uo.py  williams_r.py
src/trex/indic/pattern/: base.py  single.py  three_candle.py  two_candle.py
src/trex/indic/smc_rsi/: __init__.py  model.py
src/trex/indic/statistics/: correl.py  linreg_slope.py  percentrank.py  variance.py  zscore.py
src/trex/indic/trend/: __init__.py  alma.py  t3.py  (+21 more)
src/trex/presentation/: __init__.py  indicators.py  series_mixin.py  zigzag.py
src/trex/server/: server.py  session.py  store.py  sync.py
src/trex/source/: __init__.py  binance.py  candle_source.py  config.py  postgres.py
src/trex/store/: README.md  __init__.py  db_store.py  exceptions.py  utils.py
tests/unit/: test_engine.py
(+20 files in other folders)
